analysis/low-level-api-fir/testData/lazyResolve/errors/danglingAnnotationMemberFunction3.kt
annotation class Ann

class C {
    @Ann( @Ann(
    fun <caret>foo() {}
}